# ROS-Structure-From-Motion

./: Dockerfile  README.md  cmd-mini
code/src/: .rosinstall
code/src/custom_mesh/: duck_initial.world  duck_with_walls  wall
code/src/custom_mesh/positive_walls/room/: model.sdf
code/src/custom_mesh/positive_walls/room2/: model.config  model.sdf
code/src/custom_mesh/tall_walls/: model.config  model.sdf
code/src/custom_mesh/walls/: model.sdf
code/src/duck/duck_controller/: CMakeLists.txt  package.xml
code/src/duck/duck_controller/launch/: action_astar.launch  action_frontier.launch  action_hector.launch  action_openloop.launch  action_rrt.launch
code/src/duck/duck_controller/scripts/: action_astar-backup.py  action_astar.py  action_astar_backup2.py  action_frontier.py  action_frontier_backup.py  action_hector.py  action_openloop-backup.py  action_rrt.py  astar.py  rrt.py
code/src/duck/duck_demo/: CMakeLists.txt  package.xml
code/src/duck/duck_demo/launch/: duck_flight_gazebo.launch
code/src/duck/duck_demo/rviz_cfg/: duck_outdoor.rviz
code/src/duck/duck_demo/scripts/: listener.py
code/src/duck/duck_world/: CMakeLists.txt  package.xml
code/src/duck/duck_world/launch/: duck.launch
code/src/duck/duck_world/worlds/: 3duck.world  duck.world  duck_with_walls.world
code/src/duck/octomap/octomap_server/launch/: octomap_mapping.launch
code/src/hector_navigation/hector_exploration_node/src/: exploration_node.cpp
project/src/duck/duck_action/: CMakeLists.txt  duck_action_node.py  package.xml
project/src/duck/duck_controller/: CMakeLists.txt  package.xml
project/src/duck/duck_controller/launch/: action.launch  duck_controller.launch
project/src/duck/duck_controller/scripts/: action.py  next_best_view.py
project/src/duck/duck_demo/launch/: duck_flight_gazebo.launch
project/src/duck/duck_world/worlds/: duck.world
