<?xml version="1.0"?>
<package>
  <name>duck_demo</name>
  <version>0.0.0</version>
  <description>The duck_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>argparse</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>laser_geometry</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>duck_world</run_depend>
  <run_depend>hector_quadrotor_gazebo</run_depend>
  <run_depend>hector_gazebo_worlds</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>argparse</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>laser_geometry</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
